# LearningForOpengl

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  install-msvc-env.bat
app/: CMakeLists.txt
app/src/: main.cpp
controller/: CMakeLists.txt
data/: CMakeLists.txt
script/: CMakeLists.txt
ui/: CMakeLists.txt
ui/include/: export_def.h  mainwindow.h
ui/src/: mainwindow.cpp
ui/ui/: mainwindow.ui
